--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,11 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+body {
+    background-color: darkslategray !important;
+}
+
+* {
+    color: #009966;
+}
